--- a/index.html
+++ b/index.html
@@ -1,3 +1,261 @@
-<html>
-Hi, I am BTF=>PUSPARAJ.
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS Libraries -->
+    <link rel="stylesheet" href="css/nomalize.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="library/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="library/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/custom.css">
+
+    <!-- Title -->
+    <title>PuspaRaj Joshi</title>
+    <link rel="icon" type="image/png" href="img/title.png">
+
+  </head>
+  <body>
+
+    <!-- Navigation -->
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top py-3">
+        <div class="container">
+          <a class="navbar-brand scroll-link" href="#home">
+            <img src="img/title.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+            Pusparaj
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item active">
+                <a class="nav-link scroll-link" href="#home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link scroll-link" href="#resume">Resume</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link scroll-link" href="#portfolio">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link scroll-link" href="#contact">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!-- home -->
+    <section id="home">
+      <div id="particles-js"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 justify-content-center">
+            <h1 id="name" class="wow fadeIn">PuspaRaj Joshi</h1>
+            <p id="tagline" class="wow fadeIn">I'm a Computer Enthusiest and Welcome to my Website.</p>
+            <a href="#resume" id="learn-more" class="scroll-link wow fadeIn"><i class="fa fa-angle-down"></i> Learn More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- resume -->
+    <section id="resume">
+      <div class="container pt-5">
+        <div class="row">
+          <h2 class="title text-center w-100 wow slideInUp">Hi, I am PuspaRaj Joshi</h2>
+          <p class="about text-center w-75 mx-auto wow fadeIn">I love to invest my time with computer. Just like any computer enthusiest, I have keen interest in Computer .</p>
+        </div>
+        <div class="row">
+          <h2 class="title text-center w-100 wow fadeIn">And I love.</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-4 py-3">
+            <div class="card wow fadeIn" style="max-width: 18rem;">
+              <img src="img/programming.jpg" class="card-img-top" alt="Programming">
+              <div class="card-body">
+                <h5 class="card-title">Programming</h5>
+                <p class="card-text">I love Programming. I have built many games and written problem solving programs in various languages like C, C++ and Python.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 py-3">
+            <div class="card wow fadeIn" style="max-width: 18rem;">
+              <img src="img/ehacking.jpg" class="card-img-top" alt="Ethical Hacking">
+              <div class="card-body">
+                <h5 class="card-title">Networking</h5>
+                <p class="card-text">I love Computer Networking. I have sound knowledge on computer Networking.I have completed CCNA 200-301(not certified)</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 py-3">
+            <div class="card wow fadeIn" style="max-width: 18rem;">
+              <img src="img/designing.jpg" class="card-img-top" alt="Designing">
+              <div class="card-body">
+                <h5 class="card-title">Designing</h5>
+                <p class="card-text">I love designing. I have more than 3 months of professional experience as junior graphics designer.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- < portfolio > -->
+     <section id="portfolio">
+      <div class="container">
+        <div class="row">
+          <h2 class="title text-center w-100 wow slideInUp">What I have done?</h2>
+        </div>
+        <div class="row">
+          <div class="col-md-4 wow fadeIn">
+            <div class="grid">
+              <img src="img/terminaltetris.jpg" alt="Terminaltetris"> 
+               <div class="overlay"> 
+                 <div class="text"> 
+                   Terminaltetris
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 wow fadeIn">
+            <div class="grid">
+              <img src="img/Ethical-Hacking.jpg" alt="Ethical Hacking">
+              <div class="overlay">
+                <div class="text">
+                  Ethical Hacking
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 wow fadeIn">
+            <div class="grid">
+              <img src="img/main-q.png" alt="Main Q">
+              <div class="overlay">
+                <div class="text">
+                  Main Q
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 wow fadeIn">
+            <div class="grid">
+              <img src="img/Prevent-Identity-Theft.jpg" alt="Prevent Identity Theft">
+              <div class="overlay">
+                <div class="text">
+                  Prevent Identity Theft
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 wow fadeIn">
+            <div class="grid">
+              <img src="img/covid19.png" alt="Covid 19">
+              <div class="overlay">
+                <div class="text">
+                  Covid 19
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 wow fadeIn">
+            <div class="grid">
+              <img src="img/python.jpg" alt="Python Project">
+              <div class="overlay">
+                <div class="text">
+                  Python Project
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> 
+
+    <!-- contact -->
+    <section id="contact">
+      <div class="container">
+        <div class="row">
+          <h2 class="title text-center w-100 wow slideInUp">Say Hi to Me.</h2>
+        </div>
+        <form action="https://formspree.io/your@email.com" method="POST"> 
+          <form
+  action="https://formspree.io/f/mgeqvypk"
+  method="POST"
+>
+          <div class="row py-4">
+            <div class="form-group col-md-6 wow fadeIn">
+              <input type="text" name="name" class="form-control" placeholder="Enter your Name...">
+            </div>
+            <div class="form-group col-md-6 wow fadeIn">
+              <input type="email" name="email" class="form-control" placeholder="Enter your Email...">
+            </div>
+            <div class="form-group col-md-12 wow fadeIn">
+              <textarea class="form-control" name="message" rows="3" placeholder="Enter your Message..."></textarea>
+            </div>
+            <button type="submit" class="btn btn-block submit-message">Submit</button>
+        </form>
+      </div>
+    </section>
+
+    <!-- footer -->
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-5 wow fadeIn">
+            <ul>
+              <li><strong>Email:</strong> mailme.pusparajjoshi9630@gmail.com</li>
+              <li><strong>Phone:</strong> +9779865879630</li>
+            </ul>
+          </div>
+          <div class="col-md-2 wow fadeIn">
+            <a href="#home" class="back-to-top scroll-link"><i class="fa fa-arrow-circle-up fa-2x"></i></a>
+          </div>
+          <div class="col-md-5 wow fadeIn">
+            <ul id="social">
+              <li><a href="https://www.facebook.com/pusp.joc4/" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+              <li><a href="https://www.instagram.com/pusp_joc30/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/haha/" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+              <li><a href="https://www.twitter.com/pusparaj0001" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 wow fadeIn">
+            <a href="http://www.pusparajjaishi.com.np/" target="_blank">Designed and Built by Pusparaj Joshi.</a>
+          </div>
+          <div class="col-md-6 wow fadeIn">
+            <p>Copyright (c) PuspaRaj Joshi.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- JS Librairies -->
+    <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/smooth-scroll.js"></script>
+    <script type="text/javascript" src="js/wow.js"></script>
+    <script type="text/javascript" src="js/particles.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+
+    <script type="text/javascript">
+      new WOW().init();
+      $('.scroll-link').on('click', function(e){
+        e.preventDefault();
+        $('html,body').animate({scrollTop: $(this.hash).offset().top-50},750);
+      });
+      $('.nav-item').on('click', function(){
+        $('.nav-item').removeClass('active');
+        $(this).addClass('active');
+      });
+    </script>
+
+  </body>
 </html>
